crates/nx-syntax/tests/fixtures/valid/component-emits-inherited-action.nx
abstract action InputAction = {
  source: string
}

component <SearchBox emits { ValueChanged extends InputAction { value: string } } /> = {
  <TextInput />
}
