crates/nx-syntax/tests/fixtures/invalid/action-inheritance-multiple-bases.nx
action SearchSubmitted extends InputAction, TrackingAction = {
  query: string
}

component <SearchBox emits { ValueChanged extends InputAction, TrackingAction { value: string } } /> = {
  <TextInput />
}
